--- a/course-remote-info.yaml
+++ b/course-remote-info.yaml
@@ -3,14 +3,14 @@ hyperskill_project:
   ide_files: https://stepik.org/media/attachments/lesson/539847/additional_files.json
   is_template_based: false
   use_ide: true
-update_date: Tue, 15 Jun 2021 04:37:00 UTC
+update_date: Tue, 15 Jun 2021 09:37:34 UTC
 stages:
 - id: 945
   step: 13375
   is_completed: true
 - id: 946
   step: 13376
-  is_completed: false
+  is_completed: true
 - id: 947
   step: 13377
   is_completed: false
