--- a/Cinema Room REST Service/Show begins/task-info.yaml
+++ b/Cinema Room REST Service/Show begins/task-info.yaml
@@ -110,7 +110,7 @@ files:
 - name: src/cinema/Cinema.java
   visible: true
   learner_created: true
-- name: src/cinema/Controller.java
+- name: src/cinema/SeatsController.java
   visible: true
   learner_created: true
 feedback_link: https://hyperskill.org/projects/189/stages/945/implement#comment
