--- a/Topics/Generics and Object/Correct the usage of non-generic class/task-info.yaml
+++ b/Topics/Generics and Object/Correct the usage of non-generic class/task-info.yaml
@@ -29,5 +29,5 @@ files:
     }
   learner_created: false
 feedback_link: https://hyperskill.org/learn/step/11179#comment
-status: Unchecked
+status: Solved
 record: -1
