--- a/Cinema Room REST Service/A change of plans/task-info.yaml
+++ b/Cinema Room REST Service/A change of plans/task-info.yaml
@@ -370,27 +370,6 @@ files:
 
     }
   learner_created: true
-- name: src/cinema/SeatNotAvailableException.java
-  visible: true
-  text: |
-    package cinema;
-
-    import org.springframework.http.HttpStatus;
-    import org.springframework.web.bind.annotation.ResponseStatus;
-
-    @ResponseStatus(value = HttpStatus.BAD_REQUEST)
-    public class SeatNotAvailableException extends RuntimeException {
-
-        SeatNotAvailableException() {
-            super();
-        }
-
-        SeatNotAvailableException(String message) {
-            super(message);
-        }
-
-    }
-  learner_created: true
 - name: src/cinema/Error.java
   visible: true
   text: |
@@ -480,54 +459,36 @@ files:
         }
     }
   learner_created: true
-- name: src/cinema/SeatsController.java
+- name: src/cinema/CinemaController.java
+  visible: true
+  learner_created: true
+- name: src/cinema/Ticket.java
+  visible: true
+  learner_created: true
+- name: src/cinema/CinemaException.java
   visible: true
   text: |
     package cinema;
 
-    import org.springframework.web.bind.annotation.*;
+    import org.springframework.http.HttpStatus;
+    import org.springframework.web.bind.annotation.ResponseStatus;
 
-    import java.util.Map;
+    @ResponseStatus(value = HttpStatus.BAD_REQUEST)
+    public class SeatNotAvailableException extends RuntimeException {
 
-
-    @RestController
-    public class SeatsController {
-
-        private final Cinema cinema = new Cinema(9, 9);
-
-        @GetMapping("/seats")
-        public Map<String, ?> getCinema() {
-            return Map.of(
-                    "total_rows", cinema.getTotalRows(),
-                    "total_columns", cinema.getTotalColumns(),
-                    "available_seats", cinema.getAvailableSeats()
-            );
+        SeatNotAvailableException() {
+            super();
         }
 
-        @PostMapping("/purchase")
-        public Map<String, ?> postSeats(@RequestBody Seat seat) {
-            int row = seat.getRow();
-            int column = seat.getColumn();
-
-            if (row > 9 || row < 1 || column > 9 || column < 1) {
-                // return error
-                throw new SeatNotAvailableException("The number of a row or a column is out of bounds!");
-            }
-            Seat selectedSeat = new Seat(row, column);
-            if (!cinema.getAvailableSeats().contains(selectedSeat)) {
-                // return error
-                throw new SeatNotAvailableException("The ticket has been already purchased!");
-            } else {
-                cinema.getAvailableSeats().remove(selectedSeat);
-                return Map.of(
-                        "row", selectedSeat.getRow(),
-                        "column", selectedSeat.getColumn(),
-                        "price", selectedSeat.getPrice()
-                );
-            }
+        SeatNotAvailableException(String message) {
+            super(message);
         }
+
     }
   learner_created: true
 feedback_link: https://hyperskill.org/projects/189/stages/947/implement#comment
-status: Unchecked
-record: 3
+status: Solved
+feedback:
+  message: Congratulations!
+  time: Wed, 16 Jun 2021 05:12:23 UTC
+record: -1
